<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/first"
            android:layout_alignTop="@+id/first"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@drawable/naru" />


        <LinearLayout
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8fffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="@string/header"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#8fffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/question1"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/actual_question1"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button1a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio1a"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button1b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio1b"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button1c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio1c"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button1d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio1d"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#8fffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/question2"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/actual_question2"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button2a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio2a"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button2b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio2b"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button2c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio2c"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button2d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio2d"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#8fffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/question3"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/actual_question2"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button3a"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio3a"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button3b"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio3b"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button3c"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio3c"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                    <RadioButton
                        android:id="@+id/radio_button3d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:text="@string/radio3d"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#8fffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/question4"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/actual_question4"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkbox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingLeft="24dp"
                    android:text="@string/checkbox1"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <CheckBox
                    android:id="@+id/checkbox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="24dp"
                    android:text="@string/checkbox2"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

                <CheckBox
                    android:id="@+id/checkbox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="24dp"
                    android:text="@string/checkbox3"
                    android:textAppearance="?android:textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="#8fffffff"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/question5"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="3dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/actual_question5"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer"
                    android:inputType="textMultiLine" />


            </LinearLayout>

            <TextView
                android:id="@+id/score_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="serif-monospace"
                android:padding="5dp"
                android:text="@string/scoredisplay"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button"
                    android:fontFamily="serif-monospace"
                    android:onClick="submit"
                    android:padding="15dp"
                    android:text="submit"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/button_two"
                    android:fontFamily="serif-monospace"
                    android:onClick="reset"
                    android:padding="15dp"
                    android:text="reset"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>